--- a/api/.env
+++ b/api/.env
@@ -5,3 +5,9 @@ CLERK_PUBLISHABLE_KEY=pk_test_bmljZS1iYXNzLTk3LmNsZXJrLmFjY291bnRzLmRldiQ
 CLERK_SECRET_KEY=sk_test_FrQqVAOk21yLJQzrPbAxxXWLWwU8qDoOZQR3MJBolo
 
 CLERK_WEBHOOK_SECRET_KEY=whsec_A6+OKdNxECE49ok8LPONSbuKg8xKRy3W
+
+# cloudinary 
+ CLOUDINARY_CLOUD_NAME=dwjdqgzyo
+ CLOUDINARY_API_KEY=963758544147487
+CLOUDINARY_API_SECRET=AScd1NN8ITL443-o3pb1SBroGRw
+CLOUDINARY_URL=cloudinary://<your_api_key>:<your_api_secret>@dwjdqgzyo
